[IO-510] Add and adapt ReadAheadInputStream and BufferedFileChannelInputStream from Apache Spark.
Compiles on Java 8 and 11.